<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/candy_bar_party"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/okBtn"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/lollipop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:srcCompat="@drawable/lollipop" />

                <TextView
                    android:id="@+id/candy_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/lollipop"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/okBtn" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/to_order_press_big_candy_button"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/candy_name_text" />

                <ImageView
                    android:id="@+id/lollipop_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/selected"
                    app:layout_constraintEnd_toStartOf="@+id/candy_btn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:srcCompat="@drawable/selected" />

                <ImageView
                    android:id="@+id/candy_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/candy"
                    app:layout_constraintEnd_toStartOf="@+id/gum_btn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/lollipop_btn"
                    app:layout_constraintTop_toTopOf="@+id/lollipop_btn"
                    app:srcCompat="@drawable/candy" />

                <ImageView
                    android:id="@+id/gum_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/gum"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/candy_btn"
                    app:layout_constraintTop_toTopOf="@+id/candy_btn"
                    app:srcCompat="@drawable/gum" />

                <ImageView
                    android:id="@+id/jelly_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/jelly"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/pepper_btn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lollipop_btn"
                    app:srcCompat="@drawable/jelly" />

                <ImageView
                    android:id="@+id/pepper_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/pepper"
                    app:layout_constraintEnd_toStartOf="@+id/chocolate_btn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/jelly_btn"
                    app:layout_constraintTop_toTopOf="@+id/jelly_btn"
                    app:srcCompat="@drawable/pepper" />

                <ImageView
                    android:id="@+id/chocolate_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/chocolate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pepper_btn"
                    app:layout_constraintTop_toTopOf="@+id/pepper_btn"
                    app:srcCompat="@drawable/chocolate" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>