<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".successPage">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="261dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/thank_you_for_ordering_and_just_enjoy_your_beautiful_taste"
                        android:textAlignment="center"
                        android:textColor="@color/brown"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="254dp"
                        android:layout_height="222dp"
                        android:layout_marginTop="42dp"
                        android:contentDescription="@string/succes_girl"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:srcCompat="@drawable/undraw_successful_purchase_re_mpig" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/yay_order_succcess"
                        android:textColor="@color/softBrown"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_finish"
                        android:layout_width="180dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/order_button"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/finish"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>