<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/order_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink"
        tools:context=".orderPage">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/candy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Candy"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/candy_title" />

        <TextView
            android:id="@+id/candy_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Rp.5000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/candy_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/candy_title" />

        <Button
            android:id="@+id/buy_btn"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@color/softYellow"
            android:fontFamily="@font/poppins"
            android:text="@string/buy"
            android:textAllCaps="false"
            android:textColor="@color/brown"
            android:textSize="20sp"
            app:backgroundTint="@color/softYellow"
            app:icon="@drawable/ic_shop"
            app:iconTint="@color/brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/share_btn"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/share_btn"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="@color/softBrown"
            android:fontFamily="@font/poppins"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:backgroundTint="@color/softBrown"
            app:icon="@drawable/ic_share"
            app:layout_constraintEnd_toStartOf="@+id/buy_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buy_btn" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_btn" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/candy_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/lollipops_are_the_favorite_sugar_candy_that_has_existed_since_time_immemorial_the_origin_of_lollipops_is_thought_to_have_come_from_the_way_ancient_humans_collected_honey_using_sticks_they_then_consume_the_honey_that_has_been_collected_directly_from_the_stick_the_forerunner_of_a_more_modern_lollipop_is_thought_to_have_been_found_in_the_arab_chinese_and_ancient_egyptian_cultures_at_that_time_their_people_made_candy_by_mixing_fruits_or_nuts_with_honey_and_then_stabbed_with_a_stalk_to_make_it_easier_to_enjoy"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/img_candy"
            android:layout_width="200dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/candy" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>